// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressTrackerStep> Snapshots and structure should render 1`] = `
<button
  aria-controls="tab-panel-1"
  aria-selected={false}
  className="lumx-progress-tracker-step lumx-progress-tracker-step--is-clickable"
  id="tab-1"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={-1}
  type="button"
>
  <Icon
    className="lumx-progress-tracker-step__state"
    icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    size="s"
  />
  <InputLabel
    className="lumx-progress-tracker-step__label"
    htmlFor="tab-1"
    theme="light"
  >
    Test Step Label
  </InputLabel>
</button>
`;

exports[`<ProgressTrackerStep> Snapshots and structure should render active erroneous state 1`] = `
<button
  aria-controls="tab-panel-3"
  aria-selected={true}
  className="lumx-progress-tracker-step lumx-progress-tracker-step--is-active lumx-progress-tracker-step--is-clickable"
  id="tab-3"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={0}
  type="button"
>
  <Icon
    className="lumx-progress-tracker-step__state"
    icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
    size="s"
  />
  <InputLabel
    className="lumx-progress-tracker-step__label"
    htmlFor="tab-3"
    theme="light"
  >
    Test Step Label
  </InputLabel>
</button>
`;

exports[`<ProgressTrackerStep> Snapshots and structure should render active state 1`] = `
<button
  aria-controls="tab-panel-3"
  aria-selected={true}
  className="lumx-progress-tracker-step lumx-progress-tracker-step--is-active lumx-progress-tracker-step--is-clickable"
  id="tab-3"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={0}
  type="button"
>
  <Icon
    className="lumx-progress-tracker-step__state"
    icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
    size="s"
  />
  <InputLabel
    className="lumx-progress-tracker-step__label"
    htmlFor="tab-3"
    theme="light"
  >
    Test Step Label
  </InputLabel>
</button>
`;

exports[`<ProgressTrackerStep> Snapshots and structure should render complete state 1`] = `
<button
  aria-controls="tab-panel-3"
  aria-selected={false}
  className="lumx-progress-tracker-step lumx-progress-tracker-step--is-clickable"
  id="tab-3"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={-1}
  type="button"
>
  <Icon
    className="lumx-progress-tracker-step__state"
    icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    size="s"
  />
  <InputLabel
    className="lumx-progress-tracker-step__label"
    htmlFor="tab-3"
    theme="light"
  >
    Test Step Label
  </InputLabel>
</button>
`;

exports[`<ProgressTrackerStep> Snapshots and structure should render erroneous state 1`] = `
<button
  aria-controls="tab-panel-3"
  aria-selected={false}
  className="lumx-progress-tracker-step lumx-progress-tracker-step--is-clickable"
  id="tab-3"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={-1}
  type="button"
>
  <Icon
    className="lumx-progress-tracker-step__state"
    icon="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
    size="s"
  />
  <InputLabel
    className="lumx-progress-tracker-step__label"
    htmlFor="tab-3"
    theme="light"
  >
    Test Step Label
  </InputLabel>
</button>
`;
